final commit: prevented the page from having any overflow or leaving the containers

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ div#parent {
     display: flex;
     justify-content: center;
     background-color: black;
-    width: clamp(400px, 67%, 100vw);
+    width: 100vw;
 }
 
 /* Left Column */
@@ -26,14 +26,16 @@ div#left-child {
     box-sizing: border-box;
     justify-content: center;
     display: flex;
-    width: 40%;
+    min-width: 40%;
+    height: 100vh;
     position: relative;
+    
 }
 
-/* TODO: Clamp this image*/
 img#unsplash {
-    width: clamp(300px, 100%, 50vw);
-    height: 100vh;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
 }
 
 div#odin-banner {
@@ -49,10 +51,8 @@ div#odin-banner {
 
 }
 
-/* TODO: Clamp this image*/
 img#odin {
     width: 80px;
-    height: auto;
 }
 
 h1#odin-text {
@@ -77,24 +77,30 @@ a {
 /* Right Column */
 div#right-child {
     box-sizing: border-box;
-    width: clamp(300px, 100%, 50vw);
     background-color: #f9fafb;
+    height: 100vh;
+    overflow-y: auto;
 }
 
 div#right-child > * {
     padding-left: 3rem;
-    padding-right: 3rem;
 }
 
 div#container-one {
-    padding-top: 15vh;
+    box-sizing: border-box;
+    margin-top: 8rem;
     margin-bottom: 3rem; 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
 }
 
+div#description {
+    padding-right: 15vw;
+}
+
 div#container-two {
+    box-sizing: border-box;
     background-color: white;
     padding-bottom: 1.5rem;
     box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.12);
@@ -105,9 +111,11 @@ form {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    max-width: 800px;
 }
 
 p#form-title {
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
@@ -143,10 +151,12 @@ input {
 }
 
 div#container-three {
-    padding-top: 2rem;
+    box-sizing: border-box;
+    margin-top: 4em;
 }
 
 button#form-submit {
+    box-sizing: border-box;
     border-radius: 9px;
     border: none;
     font-family: Arial, Helvetica, sans-serif;
@@ -170,8 +180,6 @@ div#container-three p {
 div#container-three p b {
     color: #49515c;
 }
-
-/* Responsive Design */ 
 
 input:hover:not(:focus) {
     background-color: #f7f7f7;
